k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gokube
  labels:
    name: gokube
    app: gokube
