k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gokube
  namespace: gokube
  labels:
    app: gokube
    version: v1.0.0
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: gokube
---
apiVersion: v1
kind: Service
metadata:
  name: gokube-nodeport
  namespace: gokube
  labels:
    app: gokube
    version: v1.0.0
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: gokube
